# mario-reinforcment-learning

./: .gitignore  README.md  generate_report.py  play.py  pyproject.toml  record_video.py  train.py
.github/workflows/: ci.yml  deploy-site.yml
configs/: dqn.yaml  ppo.yaml  rainbow.yaml
mario_rl/: __init__.py  config.py  curriculum.py  env.py  metrics.py  wrappers.py
mario_rl/agents/: __init__.py  base.py  dqn.py  ppo.py
mario_rl/networks/: __init__.py  dqn_net.py
site/: index.html  package-lock.json  vite.config.js
site/public/data/: dqn.json  ppo.json  rainbow.json
site/src/: App.jsx  styles.css
site/src/components/: CompareView.jsx  GameScreen.jsx  ModelCard.jsx  ModelInfo.jsx  Pipeline.jsx  StatsPanel.jsx
